# synthesized-datasets

./: .gitignore  README.md  pyproject.toml
src/data/: common.py  wikipedia_sections.py  wikipedia_sections2.py
src/make_paraphrase/: gemma2_27b.py  gemma2_27b_balance.py  gemma2_9b.py
src/make_paraphrase2/: gemma2_27b.py  gemma2_9b.py
src/make_qa/: gemma2_27b.py  gemma2_9b.py  phi3_5_mini.py  phi3_5_moe.py  sarashina2_13b.py  sarashina2_70b.py  sarashina2_7b.py  swallow_mx.py
src/misc/: aggr_paraphrase.py  aggr_qa.py  demo_mecab.py
